--- a/jenkinsfile
+++ b/jenkinsfile
@@ -10,7 +10,7 @@ pipeline {
         stage('build docker image') {
             steps {
 
-                sh "docker build -t test ."
+                sh "sudo docker build -t test ."
             }
         }
         // stage('Dotnet Tests') {
