--- a/jenkinsfile
+++ b/jenkinsfile
@@ -25,7 +25,7 @@ pipeline {
         }
         stage('Azure login') {
             steps {
-                withCredentials([azureServicePrincipal('$AZURE_SUBSCRIPTION_ID')]) {
+                withCredentials([azureServicePrincipal('AZURE_CRED')]) {
                     sh 'az login --service-principal -u $AZURE_CLIENT_ID -p $AZURE_CLIENT_SECRET -t $AZURE_TENANT_ID'
                     sh 'az account set -s $AZURE_SUBSCRIPTION_ID'
                     sh 'az resource list'
@@ -42,7 +42,7 @@ pipeline {
         //     }
         // }
 
-        
+
 
 
 
