--- a/jenkinsfile
+++ b/jenkinsfile
@@ -28,7 +28,11 @@ pipeline {
                 withCredentials([azureServicePrincipal('AZURE_CRED')]) {
                     sh 'az login --service-principal -u $AZURE_CLIENT_ID -p $AZURE_CLIENT_SECRET -t $AZURE_TENANT_ID'
                     sh 'az account set -s $AZURE_SUBSCRIPTION_ID'
-                    sh 'az resource list'
+                    sh 'az acr login --name shaharRG --resource-group ShaharTF'
+                    sh 'az acr build --image shaharrg.azurecr.io/test:lts --registry shaharRG --file Dockerfile . '
+         
+         
+         
                 }
             }
         }    
