--- a/ansible/roles/deploy-bootcamp/tasks/main.yml
+++ b/ansible/roles/deploy-bootcamp/tasks/main.yml
@@ -3,7 +3,7 @@
   ansible.builtin.shell: curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
 
 - name: Az Login
-  ansible.builtin.shell: az login --service-principal -u 3fec5201-576e-45cd-ab9e-5fa251f28ae6 -p YiT7QFi_NH5lg7HdsubtS1W3RU.EF4YRFi_ -t 812aea3a-56f9-4dcb-81f3-83e61357076e
+  ansible.builtin.shell: az login --service-principal -u 3fec5201-576e-45cd-ab9e-5fa251f28ae6 -p YiT7Q~Fi_NH5lg7HdsubtS~1W3RU.EF4YRFi_ -t 812aea3a-56f9-4dcb-81f3-83e61357076e
 
 # - name: Pull docker image
 #   ansible.builtin.shell: az acr login --name shaharRG
