--- a/ansible/roles/deploy-bootcamp/tasks/main.yml
+++ b/ansible/roles/deploy-bootcamp/tasks/main.yml
@@ -1,3 +1,13 @@
+- name: Let's copy our executable script to remote location, execute script and get result back.
+  remote_user: root
+  sudo: yes
+  hosts: webservers
+  tasks:
+     - name: Transfer executable script script
+       copy: src./script.sh dest=/home/shahars/script.sh mode=0777
+ 
+     - name: Execute the script
+       command: sh /home/shahars/script.sh
 
 
 
@@ -12,6 +22,7 @@
 
 - name: 
   ansible.builtin.shell: docker pull shaharrg.azurecr.io/dotnet:latest
+
 
 
 # - name: Pull docker image
