--- a/ansible/inventory/prod.yml
+++ b/ansible/inventory/prod.yml
@@ -4,10 +4,10 @@ all:
       hosts:
         webserver01:
           ansible_host: 52.186.137.20
-    dbservers:
-      hosts:
-        db1:
-          ansible_host: 20.120.114.38
+    # # dbservers:
+    #   hosts:
+    #     db1:
+    #       ansible_host: 20.120.114.38
 
 
 
