still with script

--- a/ansible/roles/installation/tasks/main.yml
+++ b/ansible/roles/installation/tasks/main.yml
@@ -4,11 +4,11 @@
 #   ansible.builtin.shell: curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
 - name: Copy file with owner and permissions
   ansible.builtin.copy:
-    src: /home/shahars/docker/dockertask/ansible/script.sh
+    src: /ansible/script.sh
     dest: /home/shahars/
     owner: shahars
     group: shahars
-    mode: '0777'
+    mode: '0755'
 
 
 - name: Execute the command in remote shell; stdout goes to the specified file on the remote
