still with script

--- a/ansible/roles/installation/tasks/main.yml
+++ b/ansible/roles/installation/tasks/main.yml
@@ -2,18 +2,20 @@
 
 # - name: Install Azure CLI    
 #   ansible.builtin.shell: curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
-- name: Copy file with owner and permissions
-  ansible.builtin.copy:
-    src: /ansible/script.sh
-    dest: /home/shahars/
-    owner: shahars
-    group: shahars
-    mode: '0755'
+# - name: Copy file with owner and permissions
+#   ansible.builtin.copy:
+#     src: ansible/script.sh
+#     dest: /home/shahars/
+#     owner: shahars
+#     group: shahars
+#     mode: '0755'
 
+
+# - name: Execute the command in remote shell; stdout goes to the specified file on the remote
+#   ansible.builtin.shell: /home/shahars/script.sh
 
 - name: Execute the command in remote shell; stdout goes to the specified file on the remote
-  ansible.builtin.shell: /home/shahars/script.sh
-
+  ansible.builtin.shell: pwd
 
 # - name: Run a script with arguments (free form)
 #   script: pwd #./script.sh 
