--- a/ansible/roles/installation/tasks/main.yml
+++ b/ansible/roles/installation/tasks/main.yml
@@ -2,20 +2,26 @@
 
 - name: Install Azure CLI    
   ansible.builtin.shell: curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
-- name: Copy file with owner and permissions
-  ansible.builtin.copy:
-    src: /ansible/script.sh
-    dest: /home/shahars/
-    owner: shahars
-    group: shahars
-    mode: '0755'
+# - name: Copy file with owner and permissions
+#   ansible.builtin.copy:
+#     src: /ansible/script.sh
+#     dest: /home/shahars/
+#     owner: shahars
+#     group: shahars
+#     mode: '0755'
 
 # /home/jenkins/workspace/dockertask_dockertask_dockertask
 # - name: Execute the command in remote shell; stdout goes to the specified file on the remote
 #   ansible.builtin.shell: /home/shahars/script.sh
 
-# - name: Execute the command in remote shell; stdout goes to the specified file on the remote
-#   ansible.builtin.shell: pwd
+- name: Execute the command in remote shell; stdout goes to the specified file on the remote
+  ansible.builtin.shell: sudo apt-get install \
+                               ca-certificates \
+                               curl \
+                               gnupg \
+                               lsb-release
+
+  
 
 # - name: Run a script with arguments (free form)
 #   script: pwd #./script.sh 
