--- a/ansible/roles/installation/tasks/main.yml
+++ b/ansible/roles/installation/tasks/main.yml
@@ -1,7 +1,7 @@
 
 
-- name: Install Azure CLI    
-  ansible.builtin.shell: curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+# - name: Install Azure CLI    
+#   ansible.builtin.shell: curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
 
 
 # # - name: Copy file with owner and permissions
