--- a/ansible/roles/deploy-bootcamp/tasks/main.yml
+++ b/ansible/roles/deploy-bootcamp/tasks/main.yml
@@ -7,8 +7,8 @@
 
 - name: Ansible copy file to remote server
   copy:
-    src: /home/jenkins/workspace/dockertask_dockertask_dockertask/txt.txt
-    dest: /etc/txt.txt
+    src: /home/jenkins/workspace/dockertask_dockertask_dockertask/script.sh
+    dest: /etc/script.sh
 
 
 # - name: Install Azure CLI    
