--- a/ansible/roles/installation/tasks/main.yml
+++ b/ansible/roles/installation/tasks/main.yml
@@ -1,4 +1,13 @@
 
+- name: Change file ownership, group and permissions
+  ansible.builtin.file:
+    path: /etc/script.sh
+    owner: shahars
+    group: shahars
+    mode: '0755'
+
+
+
 
 # - name: Install Azure CLI    
 #   ansible.builtin.shell: curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
