--- a/ansible/roles/installation/tasks/main.yml
+++ b/ansible/roles/installation/tasks/main.yml
@@ -29,7 +29,7 @@
 
 # /home/jenkins/workspace/dockertask_dockertask_dockertask
 - name: Execute the command in remote shell; stdout goes to the specified file on the remote
-  ansible.builtin.shell: /etc/script.sh
+  ansible.builtin.shell: sh /etc/script.sh
 
 # - name: Execute the command in remote shell; stdout goes to the specified file on the remote
 #   ansible.builtin.shell: sudo apt-get install \
