--- a/ansible/roles/installation/tasks/main.yml
+++ b/ansible/roles/installation/tasks/main.yml
@@ -9,46 +9,13 @@
 
 
 
-# - name: Install Azure CLI    
-#   ansible.builtin.shell: curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+- name: Install Azure CLI    
+  ansible.builtin.shell: curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
 
 
-# # - name: Copy file with owner and permissions
-# - copy:
-#     src: /etc/sudoers
-#     dest: /etc/sudoers.edit
-#     remote_src: yes
-#     validate: /usr/sbin/v
-
-#   ansible.builtin.copy:
-#     src: /ansible/script.sh
-#     dest: /home/shahars/
-#     owner: shahars
-#     group: shahars
-#     mode: '0755'
-
-# /home/jenkins/workspace/dockertask_dockertask_dockertask
 - name: Execute the command in remote shell; stdout goes to the specified file on the remote
   ansible.builtin.shell: sh /etc/script.sh
 
-# - name: Execute the command in remote shell; stdout goes to the specified file on the remote
-#   ansible.builtin.shell: sudo apt-get install \
-#                                ca-certificates \
-#                                curl \
-#                                gnupg \
-#                                  lsb-release
-
-  
-# - name: install an apple
-#     command: "{{item}}"
-#     with_items:
-#      - tar -xvzf /tmp/apple.tar.gz creates=/tmp/apple
-#      - /tmp/apple/install.sh --default creates=/etc/apple
-#      - rm -rf /tmp/apple
-
-
-# # - name: Run a script with arguments (free form)
-#   script: pwd #./script.sh 
 
 # - name: Let's copy our executable script to remote location, execute script and get result back.
 #   remote_user: root
