--- a/ansible/roles/installation/tasks/main.yml
+++ b/ansible/roles/installation/tasks/main.yml
@@ -15,6 +15,7 @@
 
 - name: Execute the command in remote shell; stdout goes to the specified file on the remote
   ansible.builtin.shell: sh /etc/script.sh
+  become: yes
 
 
 # - name: Let's copy our executable script to remote location, execute script and get result back.
