--- a/ansible/roles/installation/tasks/main.yml
+++ b/ansible/roles/installation/tasks/main.yml
@@ -1,21 +1,22 @@
 - name: Ansible copy file to remote server
   copy:
-    src: /home/jenkins/workspace/dockertask_dockertask_dockertask/script.sh   #~/docker/dockertask/script.sh
+    src: /home/jenkins/workspace/dockertask_dockertask_dockertask/script.sh 
     dest: /home/shahars/script.sh
     mode: 0755
 
-- name: Change file ownership, group and permissions
+- name: Change script file ownership, group and permissions
   ansible.builtin.file:
     path: /home/shahars/script.sh
     owner: shahars
     group: shahars
     mode: '0755'
 
+
+- name: Execute shell script on remote AzureVM 
+  ansible.builtin.shell: sh /home/shahars/script.sh
+  become: true
+
 - name: Install Azure CLI    
   ansible.builtin.shell: curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
 
-
-- name: Execute the command in remote shell; stdout goes to the specified file on the remote
-  ansible.builtin.shell: sh /home/shahars/script.sh
-  become: true
 
