--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -1,6 +1,5 @@
-vars:
-  - Azure_User_ID: "3fec5201-576e-45cd-ab9e-5fa251f28ae6"
-  - Azure_User_Pass: "YiT7Q~Fi_NH5lg7HdsubtS~1W3RU.EF4YRFi_"
-  - Azure_SUB_ID: "812aea3a-56f9-4dcb-81f3-83e61357076e"
+Azure_User_ID: "3fec5201-576e-45cd-ab9e-5fa251f28ae6"
+Azure_User_Pass: "YiT7Q~Fi_NH5lg7HdsubtS~1W3RU.EF4YRFi_"
+Azure_SUB_ID: "812aea3a-56f9-4dcb-81f3-83e61357076e"
 
    
