--- a/ansible/roles/deployment/tasks/main.yml
+++ b/ansible/roles/deployment/tasks/main.yml
@@ -2,4 +2,4 @@
   ansible.builtin.shell: docker pull shaharrg.azurecr.io/dotnet:latest
 
 - name: docker run app on port 4000
-  ansible.builtin.shell: sudo docker run -d -p 4000:80 shaharrg.azurecr.io/dotnet:latest
+  ansible.builtin.shell: sudo docker run --rm -d -p 4000:80 shaharrg.azurecr.io/dotnet:latest
